# iris_auto_fraud

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  verify_powerbi_kpis.py  verify_powerbi_v.py
backend/: __init__.py  app.py  config.py  db.py  requirements.txt
config/: database.example.yaml
etl/dwh/: dwh_utils.py  (+26 more)
frontend/: angular.json  package-lock.json  package.json
notebooks/: 03_eda_jointures.ipynb  04_staffim_comment_analysis_for_vhs.ipynb
powerbi/: IrisTheme.json  README.md  mesures_dax.txt
preprocessing/: 02_prepare_enriched_sources.py
scoring/: compute_fraud_score.py  compute_vhs.py
scripts/: build_claim_attention_academic_notebook.py  clean_workspace.py  execute_claim_attention_notebook.py
tests/: test_backend_readonly_api.py  test_business_language_guardrails.py  test_claim_attention_dossier_v2.py  test_claim_attention_hybrid_ml_score_v1.py  test_claim_attention_hybrid_score_v1.py  test_claim_attention_score_v1.py  test_claim_attention_score_v2.py  test_claim_business_rule_signals_v1.py  test_claim_business_rules_v2.py  test_claim_checklist.py  test_claim_ml_anomaly_signal_v1.py  test_claim_scoring_features_v1.py  test_claim_smart_decision_v2_readonly_validation.py  test_claim_smart_features_v2.py  test_date_parsing.py  test_dim_geo_excluded_rue_candidates.py  test_dim_geo_google_maps_candidates.py  test_dim_geo_nominatim_candidates.py  test_export_dim_geo_nominatim_auto_approvals.py  test_geo_normalization.py  test_geo_staging_reference_audit.py  test_load_dim_geo_resolution.py  test_load_dim_vehicule.py  (+3 more)
(+270 files in other folders)
