[project]
name = "iris-auto-fraud"
version = "0.1.0"
description = "IRIS Auto Fraud Decision Platform - ETL, data warehouse et scoring VHS pour la detection de fraude automobile (BNA Assurances Tunisie)"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
